# cognitora-inference

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  plan.md  rust-toolchain.toml
.github/workflows/: bench.yml  ci.yml  e2e.yml  release.yml
SECURITY/: README.md  cosign.pub
configs/: cognitora.toml.example
deploy/docker/: Dockerfile  Dockerfile.agent
deploy/installer/: install.sh
deploy/kubernetes/crds/: inferencecluster.yaml  modelpool.yaml  routingpolicy.yaml
deploy/kubernetes/quickstart/: README.md  cognitora-cpu.yaml
deploy/systemd/: README.md  cgn-agent.service  cgn-kvcached.service  cgn-metrics.service  cgn-router.service  cognitora.target
deploy/terraform/aws/: main.tf
deploy/terraform/azure/: main.tf
deploy/terraform/baremetal/: README.md
deploy/terraform/gcp/: main.tf
deploy/terraform/hetzner/: main.tf
docs/: ARCHITECTURE.md
docs/api/: grpc.md  openai.md
docs/architecture/: kv-strategy.md  kv-tiering.md  protocols.md  repo-layout.md  routing.md  security.md  vs-dynamo.md
docs/guides/: baremetal.md  kubernetes.md  quickstart.md  recipes.md
docs/guides/cloud/: README.md  aws.md  azure.md  gcp.md  hetzner.md
docs/operations/: observability.md  slo.md
docs/operations/runbooks/: README.md  agent-stuck.md  cache-cold.md  router-down.md
docs/platform/: README.md  cgn-agent.md  cgn-ctl.md  cgn-kvcached.md  cgn-metrics.md  cgn-operator.md  cgn-router.md
docs/reference/: config.md  env.md  exit-codes.md
examples/: README.md
examples/apple-mlx/: README.md  agent-mlx.toml  demo.sh  download-model.sh  kvcached.toml  router.toml  verify-engine.sh
examples/docker-ollama/: README.md  agent.toml  compose.yaml  demo.sh  router.toml
examples/local-mac/: README.md  agent-llama32.toml  agent-phi3.toml  demo.sh  kvcached.toml  router.toml
examples/multi-llm/: README.md  agent-qwen-vllm.toml  agent-qwen.toml  agent-tiny-vllm.toml  agent-tiny.toml  bench.sh  demo.sh  kvcached.toml  router.toml
proto/cognitora/v1/: agent.proto  common.proto  control.proto  kv.proto  metrics.proto  router.proto
recipes/: README.md
recipes/_lib/: recipe.sh
recipes/deepseek-v4-flash/: README.md
recipes/llama3-70b/: README.md
recipes/llama3-8b/: README.md
recipes/qwen3-7b/: README.md
reports/: benchmark-v0.1.1-cpu.md  raw-conc.jsonl  raw-full.jsonl
rust/libraries/cgn-auth/: Cargo.toml  README.md
rust/libraries/cgn-auth/src/: api_key.rs  lib.rs  middleware.rs  oidc.rs
rust/libraries/cgn-core/: Cargo.toml  README.md
rust/libraries/cgn-core/src/: config.rs  error.rs  hash.rs  lib.rs  prefix.rs
rust/libraries/cgn-core/tests/: exit_codes.rs  recipes.rs
rust/libraries/cgn-helm/: Cargo.toml  README.md
rust/libraries/cgn-helm/src/: lib.rs
rust/libraries/cgn-k8s/: Cargo.toml  README.md
rust/libraries/cgn-k8s/src/: crds.rs  helpers.rs  lib.rs
rust/libraries/cgn-kv/: Cargo.toml  README.md
rust/libraries/cgn-kv/src/: block.rs  index.rs  lib.rs  rdma.rs  ssd.rs  tier.rs  transport.rs
rust/libraries/cgn-power/: Cargo.toml  README.md
rust/libraries/cgn-power/src/: lib.rs  nvml.rs  redfish.rs
rust/libraries/cgn-proto/: Cargo.toml  README.md  build.rs
rust/libraries/cgn-proto/proto/cognitora/v1/: agent.proto  common.proto  control.proto  kv.proto  metrics.proto  router.proto
rust/libraries/cgn-proto/src/: lib.rs
rust/libraries/cgn-ratelimit/: Cargo.toml  README.md
rust/libraries/cgn-ratelimit/src/: lib.rs  redis_backend.rs
rust/libraries/cgn-telemetry/: Cargo.toml  README.md
rust/libraries/cgn-telemetry/src/: lib.rs
rust/libraries/cgn-tls/: Cargo.toml  README.md
rust/libraries/cgn-tls/src/: lib.rs
rust/services/cgn-agent/: Cargo.toml  README.md
rust/services/cgn-agent/src/: grpc.rs  health.rs  main.rs  supervisor.rs
rust/services/cgn-agent/src/engine/: mod.rs  openai_http.rs  spawn.rs  vllm.rs
rust/services/cgn-ctl/: Cargo.toml  README.md
rust/services/cgn-ctl/src/: bench.rs  cluster.rs  etcd.rs  install.rs  key.rs  main.rs  model.rs  pki.rs  recipe.rs
rust/services/cgn-ctl/src/install/: single_node.rs
rust/services/cgn-kvcached/: Cargo.toml  README.md
rust/services/cgn-kvcached/src/: grpc.rs  main.rs  tiers.rs  transport.rs
rust/services/cgn-metrics/: Cargo.toml  README.md
rust/services/cgn-metrics/src/: main.rs  power.rs  scraper.rs
rust/services/cgn-operator/: Cargo.toml  README.md
rust/services/cgn-operator/src/: main.rs  reconcile.rs  render.rs
rust/services/cgn-operator/src/controllers/: inference_cluster.rs  mod.rs  model_pool.rs  routing_policy.rs
rust/services/cgn-router/: Cargo.toml  README.md
rust/services/cgn-router/src/: admission.rs  autoscaler.rs  cascade.rs  deadline.rs  disagg.rs  federation.rs  main.rs  state.rs
rust/services/cgn-router/src/cluster/: mod.rs  registry.rs  watcher.rs
rust/services/cgn-router/src/gateway/: chat.rs  embed.rs  metrics.rs  mod.rs  models.rs  sse.rs  types.rs
rust/services/cgn-router/src/routing/: grpc.rs  mod.rs  score.rs  selector.rs
scripts/: e2e-gpu.sh
scripts/bench/: README.md  bench_client.py  down-bench.sh  down-gpu.sh  download-models-gpu.sh  run_bench.sh  run_bench_gpu.sh  run_bench_vllm.sh  up-bench.sh  up-cognitora-gpu.sh  up-cognitora-vllm.sh  up-engines-gpu.sh  up-engines-vllm.sh
scripts/bench/configs/: agent-llamacpp.toml  kvcached.toml  (+2 more)
scripts/bench/configs-gpu/: agent-llamacpp-mid.toml  agent-llamacpp-small.toml  agent-ollama-mid.toml  agent-ollama-small.toml  agent-vllm-mid.toml  agent-vllm-small-b.toml  agent-vllm-small-nocache.toml  agent-vllm-small.toml  kvcached.toml  router.toml
scripts/install/: bootstrap-debian.sh  download-model.sh  install-engine-cpu.sh  install-engine-gpu.sh  install-etcd.sh
scripts/release/: pack.sh
scripts/run/: down.sh  lib.sh  status.sh  up.sh
temp/: ai_inference_platform_prod.md  open-inference_architecture_77597618.plan.md
tests/: README.md
tests/e2e/: multi_engine.sh  multi_node_kv.sh  single_node.sh
tests/perf/: Cargo.toml
tests/perf/benches/: prefix.rs  routing.rs
tests/perf/src/: lib.rs
(+93 files in other folders)
