[workspace]
resolver = "2"
members = [
    # Libraries (shared crates)
    "rust/libraries/cgn-proto",
    "rust/libraries/cgn-core",
    "rust/libraries/cgn-tls",
    "rust/libraries/cgn-telemetry",
    "rust/libraries/cgn-kv",
    "rust/libraries/cgn-auth",
    "rust/libraries/cgn-ratelimit",
    "rust/libraries/cgn-k8s",
    "rust/libraries/cgn-helm",
    "rust/libraries/cgn-power",

    # Services (binary crates)
    "rust/services/cgn-router",
    "rust/services/cgn-agent",
    "rust/services/cgn-kvcached",
    "rust/services/cgn-metrics",
    "rust/services/cgn-ctl",
    "rust/services/cgn-operator",

    # Benches / e2e helpers
    "tests/perf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/antonellof/cognitora-inference"
homepage = "https://github.com/antonellof/cognitora-inference"
authors = ["Cognitora Authors"]

# Workspace-wide lint policy. Cognitora's `Error` enum is intentionally
# wide (it spans config, IO, gRPC, etcd, …); the `result_large_err` and
# `large_enum_variant` lints would force boxing in every public Result,
# which trades a tiny perf win for a worse API. `dead_code` is allowed
# because some forward-looking helpers (autoscaler, federation,
# deadline admission) expose APIs that aren't yet wired into every
# call site.
[workspace.lints.clippy]
result_large_err   = "allow"
large_enum_variant = "allow"

[workspace.lints.rust]
dead_code = "allow"

[workspace.dependencies]
# Internal crates. `path` keeps local builds resolving against the workspace
# checkout; `version` is what `cargo publish` writes into the published
# manifest (the path is stripped on upload).
cgn-proto      = { path = "rust/libraries/cgn-proto",     version = "0.1.0" }
cgn-core       = { path = "rust/libraries/cgn-core",      version = "0.1.0" }
cgn-tls        = { path = "rust/libraries/cgn-tls",       version = "0.1.0" }
cgn-telemetry  = { path = "rust/libraries/cgn-telemetry", version = "0.1.0" }
cgn-kv         = { path = "rust/libraries/cgn-kv",        version = "0.1.0", default-features = false }
cgn-auth       = { path = "rust/libraries/cgn-auth",      version = "0.1.0" }
cgn-ratelimit  = { path = "rust/libraries/cgn-ratelimit", version = "0.1.0" }
cgn-k8s        = { path = "rust/libraries/cgn-k8s",       version = "0.1.0" }
cgn-helm       = { path = "rust/libraries/cgn-helm",      version = "0.1.0" }
cgn-power      = { path = "rust/libraries/cgn-power",     version = "0.1.0" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# gRPC / proto
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-build = { version = "0.12" }
prost = "0.13"
prost-types = "0.13"

# HTTP / TLS
axum = { version = "0.7", features = ["macros", "ws"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.1"
rustls-pki-types = "1.8"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Concurrency / data
dashmap = "6.0"
arc-swap = "1.7"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"
base64 = "0.22"
url = { version = "2.5", features = ["serde"] }

# Hashing / IDs
blake3 = "1.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
humantime = "2.1"
humantime-serde = "1.1"

# Tokenization / radix
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
radix_trie = "0.2"

# Storage / index
rocksdb = { version = "0.22", default-features = false, features = ["lz4"] }

# QUIC
quinn = "0.11"

# I/O
io-uring = "0.7"

# Cluster state
etcd-client = { version = "0.14", features = ["tls", "tls-roots"] }
chitchat = "0.9"

# Auth
openidconnect = { version = "3.5", default-features = false, features = ["reqwest", "rustls-tls"] }
jsonwebtoken = "9.3"
governor = "0.6"

# Kubernetes
kube = { version = "0.95", default-features = false, features = ["client", "rustls-tls", "runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
schemars = "0.8"

# Telemetry / metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
prometheus = { version = "0.13", default-features = false }

# NVIDIA / system
nvml-wrapper = "0.10"
sysinfo = "0.31"

# CLI / config / errors
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
config = { version = "0.14", default-features = false, features = ["toml"] }
anyhow = "1.0"
thiserror = "1.0"
notify = "6.1"

# Process / fs
nix = { version = "0.29", features = ["signal", "process"] }
which = "6.0"
tempfile = "3.12"
tar = "0.4"
flate2 = "1.0"

# Test
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
