[package]
name = "cgn-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora: OIDC + API-key authentication and RBAC"

[dependencies]
cgn-core = { workspace = true }

axum            = { workspace = true }
tower           = { workspace = true }
tower-http      = { workspace = true }
http            = "1.1"
hyper           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
base64          = { workspace = true }
hex             = { workspace = true }
jsonwebtoken    = { workspace = true }
openidconnect   = { workspace = true }
url             = { workspace = true }
reqwest         = { workspace = true }
tokio           = { workspace = true }
parking_lot     = { workspace = true }
arc-swap        = { workspace = true }
tracing         = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
async-trait     = { workspace = true }
chrono          = { workspace = true }

[lints]
workspace = true
