[package]
name = "cgn-helm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora: thin wrapper around the helm binary used by cgn-ctl"

[dependencies]
cgn-core    = { workspace = true }

tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
which        = { workspace = true }
tempfile     = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
