[package]
name = "cgn-power"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora: power readers (Redfish + IPMI + NVML)"

[dependencies]
cgn-core    = { workspace = true }

reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
nvml-wrapper = { workspace = true }
sysinfo      = { workspace = true }
base64       = { workspace = true }
url          = { workspace = true }

[lints]
workspace = true
