[package]
name = "cgn-ratelimit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora: token-bucket rate limiting (in-process + Redis backend)"

[features]
default = []
# Redis-backed token bucket. Enable for multi-replica deployments where
# the in-process governor would let bursts slip through one replica.
redis-backend = ["dep:redis"]

[dependencies]
cgn-core = { workspace = true }

axum            = { workspace = true }
http            = "1.1"
governor        = { workspace = true }
parking_lot     = { workspace = true }
dashmap         = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
async-trait     = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
redis           = { version = "0.27", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"], optional = true }
