[package]
name = "cgn-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora admin CLI"

[[bin]]
name = "cgn-ctl"
path = "src/main.rs"

[dependencies]
cgn-core      = { workspace = true }
cgn-tls       = { workspace = true }
cgn-telemetry = { workspace = true }
cgn-helm      = { workspace = true }
cgn-k8s       = { workspace = true }
cgn-proto     = { workspace = true }

tokio        = { workspace = true }
tonic        = { workspace = true }
etcd-client  = { workspace = true }
clap         = { workspace = true }
clap_complete = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
toml         = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
which        = { workspace = true }
hex          = { workspace = true }
sha2         = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
