[package]
name = "cgn-kvcached"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora KV cache daemon: GPU/RAM/SSD tiering, RocksDB index, QUIC transfer"

[[bin]]
name = "cgn-kvcached"
path = "src/main.rs"

[features]
default = ["persistent-index"]
persistent-index = ["cgn-kv/persistent-index", "dep:rocksdb"]

[dependencies]
cgn-core      = { workspace = true }
cgn-proto     = { workspace = true }
cgn-tls       = { workspace = true }
cgn-telemetry = { workspace = true }
cgn-kv        = { workspace = true, default-features = false }

tokio          = { workspace = true }
tokio-stream   = { workspace = true }
tonic          = { workspace = true }
prost          = { workspace = true }
quinn          = { workspace = true }
rustls         = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
futures        = { workspace = true }
async-trait    = { workspace = true }
rocksdb        = { workspace = true, optional = true }
bytes          = "1.7"
serde          = { workspace = true }
serde_json     = { workspace = true }
clap           = { workspace = true }
parking_lot    = { workspace = true }
arc-swap       = { workspace = true }
dashmap        = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
chrono         = { workspace = true }
bincode        = { workspace = true }

[lints]
workspace = true
