[package]
name = "cgn-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora metrics: Prometheus aggregator + power telemetry"

[[bin]]
name = "cgn-metrics"
path = "src/main.rs"

[dependencies]
cgn-core      = { workspace = true }
cgn-telemetry = { workspace = true }
cgn-power     = { workspace = true }

tokio        = { workspace = true }
axum         = { workspace = true }
hyper        = { workspace = true }
reqwest      = { workspace = true }
prometheus   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
clap         = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
parking_lot  = { workspace = true }
arc-swap     = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
