[package]
name = "cgn-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora Kubernetes operator (kube-rs)"

[[bin]]
name = "cgn-operator"
path = "src/main.rs"

[dependencies]
cgn-core      = { workspace = true }
cgn-telemetry = { workspace = true }
cgn-k8s       = { workspace = true }

tokio        = { workspace = true }
kube         = { workspace = true }
k8s-openapi  = { workspace = true }
schemars     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
futures      = { workspace = true }
async-trait  = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
etcd-client  = { workspace = true }
