[package]
name = "cgn-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cognitora router: OpenAI-compatible gateway + KV-aware orchestrator"

[[bin]]
name = "cgn-router"
path = "src/main.rs"

[dependencies]
cgn-core      = { workspace = true }
cgn-proto     = { workspace = true }
cgn-tls       = { workspace = true }
cgn-telemetry = { workspace = true }
cgn-auth      = { workspace = true }
cgn-ratelimit = { workspace = true }

tokio          = { workspace = true }
tokio-stream   = { workspace = true }
futures        = { workspace = true }
async-stream   = { workspace = true }
async-trait    = { workspace = true }
tonic          = { workspace = true }
prost          = { workspace = true }
axum           = { workspace = true }
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http           = "1.1"
tower          = { workspace = true }
tower-http     = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
dashmap        = { workspace = true }
arc-swap       = { workspace = true }
parking_lot    = { workspace = true }
crossbeam-channel = { workspace = true }
tokenizers     = { workspace = true }
radix_trie     = { workspace = true }
etcd-client    = { workspace = true }
chitchat       = { workspace = true }
tracing        = { workspace = true }
clap           = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }
blake3         = { workspace = true }
reqwest        = { workspace = true }

[dev-dependencies]
tempfile       = { workspace = true }
proptest       = { workspace = true }
criterion      = { workspace = true }

[[bench]]
name = "score"
harness = false
